--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "back-button",
-  "version": "1.0.0",
+  "name": "@react-ag-components/back-button",
+  "version": "0.0.1",
   "description": "back-button React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -18,7 +18,12 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@gov.au/body": "^0.1.1",
+    "@gov.au/direction-links": "^0.1.0",
+    "@gov.au/pancake-sass": "^1.1.0",
+    "react-router": "^3.0.0"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
@@ -26,6 +31,32 @@
     "nwb": "0.15.x",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
+  },
+  "pancake": {
+    "auto-save": true,
+    "plugins": true,
+    "ignore": [],
+    "css": {
+      "minified": true,
+      "modules": false,
+      "browsers": [
+        "last 2 versions",
+        "ie 8",
+        "ie 9",
+        "ie 10"
+      ],
+      "location": "src/",
+      "name": "ui-kit.css"
+    },
+    "sass": {
+      "modules": false,
+      "location": false,
+      "name": false
+    }
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/alphillips/back-button.git"
   },
   "author": "",
   "homepage": "",
